--- a/style.css
+++ b/style.css
@@ -9,7 +9,46 @@
     margin-right: auto;
     left: 0;
     right: 0;
+    
 }
 
 /*Write your CSS rules below!*/
-
+h1{
+    font-size: 72px;
+}
+h1,h2{
+    font-family:"Oswald", "Helvetica Neue";
+    text-align:center;
+    color: #2884C3;
+}
+hr {
+    border: 0;
+    height: 1px;
+    background: #333;
+    background-image: linear-gradient(to right, #ccc, #333, #ccc);
+}
+body{
+    font-size:1.5em;
+    font-family:"Crimson Text", "Arial";
+    line-height:1.5;
+}
+code{
+    color: #CE234C;
+    background-color:lightgray;
+}
+#font-practice{
+    font-style: italic;
+    color: green;
+}
+a:link{
+    green
+}
+a:visited{
+    color:black;
+    }
+a:hover{
+    color:red;
+}
+a:active{
+    color:blue;
+}
